--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,4 +20,6 @@ jobs:
       run: go mod download
 
     - name: Test
-      run: go test -v ./...
+      run: |
+        go test -v io
+        go test -v renewable
