--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,5 +21,5 @@ jobs:
 
     - name: Test
       run: |
-        go test -v io
-        go test -v renewable
+        go test -v ./io
+        go test -v ./renewable
