--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,9 @@ jobs:
     - name: Download dependencies
       run: go mod download
 
+    - name: Build
+      run: go build -v ./...
+
     - name: Test
       run: |
         go test -v ./io
