--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,4 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: |
-        go test -v ./io
-        go test -v ./renewable
+      run: go test -v ./...
