--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,17 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go 1.15
-        uses: actions/setup-go@v1
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.15
+          go-version: 1.17
         id: go
 
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Download dependencies
-        run: go mod download
+        run: go mod tidy && go mod download
 
       - name: Build
         run: go build -v ./...
